# agilearn

./: .gitignore  LICENSE.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  wrangler.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
docs/: about.md  index.md  service-worker.js
docs/guides/: index.md
docs/guides/classes-and-objects/: index.md
docs/guides/classes-and-objects/concepts/: composition-over-inheritance.md  index.md  when-to-reach-for-classes.md
docs/guides/classes-and-objects/learn/: 01-classes-and-init.ipynb  02-dunder-methods.ipynb  03-data-classes.ipynb  04-inheritance-and-composition.ipynb  05-class-attributes-and-properties.ipynb  index.md
docs/guides/classes-and-objects/recipes/: avoid-common-class-mistakes.md  choose-between-dataclass-namedtuple-class.md  index.md  make-a-class-iterable.ipynb  (+1 more)
docs/guides/conditional-logic/: index.md
docs/guides/data-structures/: index.md
docs/guides/dates-and-times/: index.md
docs/guides/error-handling/: index.md
docs/guides/file-handling/: index.md
docs/guides/functions/: index.md
docs/guides/iterators-and-generators/: index.md
docs/guides/logging-and-debugging/: index.md
docs/guides/packages-and-packaging/: index.md
docs/guides/regex/: index.md
docs/guides/string-processing/: index.md
docs/guides/type-hints/: index.md
docs/guides/unit-testing/: index.md
docs/lab/: index.md
overrides/: 404.html  main.html
overrides/assets/stylesheets/: agilearn.css
overrides/partials/: logo.html  search.html  source.html
plugins/: notebook_link_rewriter.py
(+246 files in other folders)
